Alignment issue in show meta data section
Conflicts:
	src/common/side-content/side-content.less

--- a/src/common/side-content/side-content.less
+++ b/src/common/side-content/side-content.less
@@ -108,8 +108,8 @@ div.side-content{
 .left100
 {
   top: 0px;
-  left:100px;
   bottom: 0px;
+  left:120px;
 }
 .cblack
 {
